# InfiniGen

./: README.md  requirements.txt
speedup/: README.md  install.sh
speedup/flexgen/: pyproject.toml
speedup/scripts/: convert_model_weights.py
