[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flexgen"
version = "0.1.7"
description = "Running large language models like OPT-175B/GPT-3 on a single GPU. Focusing on high-throughput large-batch generation."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch>=1.12", "transformers>=4.24",
    "numpy", "tqdm", "pulp", "attrs",
]

[project.urls]
"Homepage" = "https://github.com/FMInference/FlexGen"
"Bug Tracker" = "https://github.com/FMInference/FlexGen/issues"

[tool.hatch.build.targets.wheel]
exclude = ["benchmark*", "dist*", "playground*", "scripts*"]

[tool.hatch.build]
include = ["flexgen*"]


